# quecto

./: .gitignore  CHANGELOG.md  Cargo.toml  EVALS_REPORT.md  README.md  install.sh  patch_model.patch  quecto-agent-issues.md  test_crossterm.rs
.claude/skills/live-test-quecto-cmux/: SKILL.md
.qkb/: project-summary.md  quecto-project-summary.md
.superpowers/sdd/: chat-spinner-final-fix-report.md  chat-spinner-task-1-report.md
.superpowers/skills/live-uat/: SKILL.md
.superpowers/skills/run-evals/: SKILL.md
docs/: UAT-report.md
docs/superpowers/plans/: 2026-07-10-quecto-agent-m1-skeleton.md  2026-07-10-quecto-agent-m2-tools.md  2026-07-10-quecto-agent-m3-editing.md  2026-07-10-quecto-agent-m4-sandbox-policy.md  2026-07-10-quecto-agent-m5-context-verify.md  2026-07-10-quecto-agent-m6a-persistence.md  2026-07-10-quecto-core.md  2026-07-11-quecto-agent-m6b-chat-renderer.md  2026-07-12-quecto-agent-m7a-flavors.md  2026-07-12-quecto-agent-m7b-trust-scaffold.md  2026-07-14-chat-spinner-verbs.md  2026-07-14-cli-repl-ux-improvements.md  2026-07-14-crlf-patch-compatibility.md  2026-07-14-database-session-improvements.md  2026-07-14-quecto-agent-otel-plan.md  2026-07-15-quecto-mcp.md  2026-07-16-chat-improvements.md  2026-07-17-quecto-agent-anthropic-provider.md  2026-07-17-quecto-chat-reasoning-command.md  2026-07-17-quecto-reasoning-mode.md  2026-07-18-quecto-agent-markdown-rendering.md  2026-07-18-quecto-agent-mermaid-rendering.md  2026-07-18-quecto-agent-subagent-monitoring.md  2026-07-19-quecto-evals-sota.md  2026-07-20-behavioral-compatibility-experiments.md  2026-07-23-capsules.md
docs/superpowers/specs/: 2026-07-09-full-harness-reference.md  2026-07-09-quecto-harness-design.md  2026-07-10-quecto-agent-architecture.md  2026-07-10-quecto-agent-flavors-design.md  2026-07-10-quecto-agent-m4-sandbox-policy-design.md  2026-07-14-chat-spinner-verbs-design.md  2026-07-14-quecto-agent-otel-design.md  2026-07-15-quecto-mcp-design.md  2026-07-17-quecto-agent-anthropic-provider-design.md  2026-07-17-quecto-reasoning-mode-design.md  2026-07-18-quecto-agent-markdown-rendering-design.md  2026-07-18-quecto-agent-mermaid-rendering-design.md  2026-07-18-quecto-agent-subagent-monitoring-design.md  2026-07-19-image-support-design.md  2026-07-19-quecto-evals-sota-design.md  2026-07-20-behavioral-compatibility-experiments-design.md  2026-07-23-capsules-design.md
evals/: __init__.py  run_evals.sh  run_one_real.sh
evals/harbor/: __init__.py  quecto_agent.py  test_smoke.py
evals/smoke/tb_01_git_conflict_resolution/: judge.md  prompt.md  setup.sh  verify.sh
evals/smoke/tb_02_package_refactoring/: prompt.md  verify.sh
evals/smoke/tb_03_advanced_sed_awk/: judge.md  verify.sh
evals/smoke/tb_04_openssl_decryption/: judge.md  prompt.md  verify.sh
evals/smoke/tb_05_dynamic_dependency_script/: prompt.md  verify.sh
evals/smoke/tb_06_docker_build/: prompt.md  setup.sh  verify.sh
evals/smoke/tb_07_debug_c_crash/: judge.md  prompt.md  setup.sh  verify.sh
evals/smoke/tb_08_sqlite_query/: judge.md  prompt.md  setup.sh  (+1 more)
examples/telemetry/: README.md  docker-compose.yml  otel-demo.mov  run.sh
quecto-agent/: Cargo.toml
quecto-agent/src/: agent.rs  approval.rs  capsule.rs  chat.rs  context.rs  flavor.rs  instructions.rs  lib.rs  main.rs  mcp_adapter.rs  model.rs  policy.rs  provider.rs  reasoning.rs  recorder.rs  render.rs  sandbox.rs  session.rs  trust.rs  verify.rs
quecto-agent/src/tools/: fs.rs  git.rs  mod.rs  notes.rs  patch.rs  search.rs  shell.rs  subagent.rs
quecto-agent/tests/: cli.rs  model.rs  public_api_compat.rs
quecto-agent/tests/common/: mod.rs
quecto-eval/: Cargo.toml
quecto-eval/src/: cli.rs  config.rs  config_tests.rs  contracts.rs  grader.rs  lib.rs  main.rs  manifest.rs  runner.rs  snapshot.rs
quecto-eval/tests/: instrumentation_validation.rs
quecto-mcp/: Cargo.toml
quecto-mcp/src/: config.rs  error.rs  lib.rs  protocol.rs  registry.rs  server.rs  tofu.rs
quecto-mcp/src/transport/: mod.rs  sse.rs  stdio.rs  streamable_http.rs
quecto-mcp/tests/: integration.rs
src/: lib.rs  main.rs
tests/: cli.rs  http.rs  stream.rs
tests/common/: mod.rs
(+116 files in other folders)
