[package]
name = "quecto"
version = "0.1.0"
edition = "2021"
description = "The smallest harness of all time."
license = "MIT OR Unlicense"

[dependencies]
ureq = { version = "2", features = ["json"] }   # do NOT set default-features = false
serde_json = "1"

[workspace]
members = ["."]
# Future companion members (own specs): "quecto-agent", "quecto-mcp"

# Optimize the release binary for size — fitting for "the smallest harness."
[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization across crates
codegen-units = 1   # better optimization, smaller output
panic = "abort"     # drop unwinding tables
strip = true        # strip symbols
