[package]
name = "quecto-agent"
version = "0.1.0"
edition = "2021"
description = "Coding agent built on the quecto core."
license = "MIT"

[dependencies]
quecto = { path = ".." }
serde_json = "1"
ignore = "0.4"
regex = "1"
ctrlc = "3"
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
