[package]
name = "quecto-agent"
version = "0.1.0"
edition = "2021"
description = "Coding agent built on the quecto core."
license = "MIT"

[dependencies]
crossterm = "0.27"
quecto = { path = ".." }
serde_json = "1"
ignore = "0.4"
regex = "1"
ctrlc = "3"
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
