[package]
name        = "quecto-mcp"
version     = "0.1.0"
edition     = "2021"
description = "MCP client library for quecto-agent."
license     = "MIT"

[dependencies]
tokio      = { version = "1", features = ["rt", "process", "io-util", "time", "net"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
ureq       = { version = "2", features = ["json"] }
sha2       = "0.10"
quecto     = { path = ".." }

[dev-dependencies]
tempfile = "3"
